# ideaditor

./: .env.example  .gitignore  README.md  index.html  package.json  styles_index.css  tsconfig.json  vite.config.ts
src/: App.tsx  config.ts  env.d.ts  ideasStore.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
